# TranscriptionFactorPrediction

./: .gitignore  Cargo.toml  README.md  flake.nix  main.py
.github/workflows/: build.yml  publish.yml
rpy_python/: Cargo.toml
rpy_python/src/: lib.rs
src/: builder.rs  lib.rs  matrix.rs  sequence.rs
src/parser/: fasta.rs  mod.rs  profile.rs  transfac.rs
test_files/: fasta.txt  profile.txt  transfac.txt
tfp_python/: Cargo.toml  pyproject.toml
tfp_python/src/: lib.rs
tfp_python/src/parser/: fasta.rs  mod.rs  profile.rs  transfac.rs
