[package]
name = "tfp"
version = "0.1.3"
edition = "2021"

[dependencies]
rayon = "1.6"
nalgebra = { version = "0.31", features = ["sparse"] }
itertools = "0.10"
ordered-float = "3.4"
strum = { version = "0.24", features = ["derive"] }
num-traits = "0.2"
nom = "7.1"
thiserror = "1.0"
anyhow = "1.0"

[workspace]
members = ["tfp_python"]