[package]
name = "tfp_python"
version = "0.1.0"
edition = "2021"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "tfp"

# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
nalgebra = { version = "0.31", features = ["sparse"] }
tfp = { path = "../" }
pyo3 = { version = "0.17", features = ["extension-module"] }
anyhow = "1.0"
rayon = "1.6"
