[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "transcription_factor_prediction"
requires-python = ">=3.7"
dynamic = [
  "version",
  "license"
]

[project.urls]
"Source Code" = "https://github.com/Steav005/TranscriptionFactorPrediction"
Issues = "https://github.com/Steav005/TranscriptionFactorPrediction/issues"
